--- a/.github/workflows/team.yml
+++ b/.github/workflows/team.yml
@@ -1,19 +1,19 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
+# This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Create Teams [Devops, Dev and Testing] with appropriate permissions
+name: Java CI with Maven
+
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    branches:
+      - disable-merge
+      
+    
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -21,9 +21,11 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-        
-    - name: Get Repros
-      run: curl -u ${{secrets.USR_NAM}}:${{secrets.PASS}} -H "Accept:application/vnd.github.v3+json" https://api.github.com/users/rimi-345/repos
-    - name: Create Devops Team
-      run: curl -X POST -H "Accept:application/vnd.github.v3+json" -H "Authorization:${{ secrets.PASS }}" https://api.github.com/orgs/ajaykatke2005/teams -d '{"name":"Devops"}'
-
+    
+    - name: Creating a Repo
+      run: | 
+        echo "Login to git api "
+        curl -i -u ${{ secrets.GITHUBUSER }}:${{ secrets.GITHUBPASS }} https://api.github.com/user
+        echo "create a new repo"
+        curl \-X POST \-H "Accept: application/vnd.github.v3+json" \-H "Authorization: token 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" \https://api.github.com/user/repos\-d '{"name":"disable merge","allow_merge_commit":false,"allow_squash_merge":true,"allow_rebase_merge":false}' 
+        echo "completed"
